-feature#0001290: Modify how 'Index Count Changed' re-index is used
-feature#0001332: non SNMP Hosts' Reindex Method should not default to "Uptime goes backwards"
-feature#0001341: SNMP query: add oid_suffix for weird SNMP queries
-feature#0001350: Compare Cacti Data Source Info to current RRD File Info
-feature#0001372: Add Custom SNMP context for datasources 
-feature#0001401: allow "|query_foo|" substitution for graphing a --vertical-label
-feature#0001406: Dynamically display field description for templates
-feature#0001408: Hide templated input fields
-feature#0001409: Add context sensitive page help linking to cacti dokuwiki
-feature#0001418: changing the graph backround via graph templates
-feature#0001434: Nth percentile handling causes excessive memory usage (OOMs php); Use VDEF instead 
-feature#0001438: Allow for drag and drop reordering of graph template items
-feature#0001439: New pseudo variable |host_template|, support all pseudo variable derived from host table
-feature#0001450: Template import script
-feature#0001457: Support for rrdtool graph options, was: Extra settings field in graph template
-feature#0001483: (OID|VALUE)/REGEXP for get input fields 
-feature#0001525: add rebuild_poller_cache --host-id=[ID]
-feature#0001536: small patch to allow plugins to change the x-axis labels
-feature#0001542: Rewriting SNMP values of data queries
-feature#0001550: Record the polling time for each host to optimize polling times
-feature#0001588: Add pango-markup options to simple html markup in graphed text (title, legend etc) 
-feature: jQuery "TableDnd" used for cdef item sort (courtesy Browniebraun)
-feature: jQuery "TableDnd" for Graph Template Item
-feature: jQuery "TableDnd" for Data Queries Suggested Values
-feature: Default Script Server/Script Queries now accept host specific ping_retries, max_oids
-feature: Support for new variables |host_ping_retries| and |host_max_oids|
-feature: Support changing the "Reindex Method" of associated data queries