@@ -236,9 +236,10 @@ $graph_item_types = array(
 	GRAPH_ITEM_TYPE_LINE2			=> "LINE2",
 	GRAPH_ITEM_TYPE_LINE3			=> "LINE3",
 	GRAPH_ITEM_TYPE_AREA			=> "AREA",
-	GRAPH_ITEM_TYPE_STACK			=> "STACK",
+	GRAPH_ITEM_TYPE_AREASTACK		=> "AREA:STACK",
 	GRAPH_ITEM_TYPE_GPRINT			=> "GPRINT",
-	GRAPH_ITEM_TYPE_LEGEND			=> "LEGEND",
+	GRAPH_ITEM_TYPE_LINESTACK		=> "LINE:STACK",
+	GRAPH_ITEM_TYPE_LEGEND			=> __("Legend"),
 	GRAPH_ITEM_TYPE_CUSTOM_LEGEND	=> __("Custom Legend"),
 	);
 
