@@ -151,10 +151,11 @@ define("GRAPH_ITEM_TYPE_LINE1",			4);
 define("GRAPH_ITEM_TYPE_LINE2",			5);
 define("GRAPH_ITEM_TYPE_LINE3",			6);
 define("GRAPH_ITEM_TYPE_AREA",			7);
-define("GRAPH_ITEM_TYPE_STACK",			8);
+define("GRAPH_ITEM_TYPE_AREASTACK",		8);
 define("GRAPH_ITEM_TYPE_GPRINT",		9);
-define("GRAPH_ITEM_TYPE_LEGEND", 		10);
-define("GRAPH_ITEM_TYPE_CUSTOM_LEGEND",	11);
+define("GRAPH_ITEM_TYPE_LINESTACK",		10);
+define("GRAPH_ITEM_TYPE_LEGEND", 		11);
+define("GRAPH_ITEM_TYPE_CUSTOM_LEGEND",	12);
 
 define("CVDEF_ITEM_TYPE_FUNCTION",		1);
 define("CVDEF_ITEM_TYPE_OPERATOR",		2);
