@@ -291,10 +291,11 @@ function variable_nth_percentile(&$regexp_match_array, &$graph_item, &$graph_ite
 		$local_data_array = array();
 		for ($t=0;($t<count($graph_items));$t++) {
 			if (($graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREA ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_STACK ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREASTACK ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE1 ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE2 ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3) &&
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3 ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINESTACK) &&
 				(!empty($graph_items[$t]["data_template_rrd_id"]))) {
 				$local_data_array[$graph_items[$t]["local_data_id"]][] = $graph_items[$t]["data_source_name"];
 			}
@@ -305,10 +306,11 @@ function variable_nth_percentile(&$regexp_match_array, &$graph_item, &$graph_ite
 		if (!empty($graph_item["data_source_name"])) {
 			for ($t=0;($t<count($graph_items));$t++) {
 				if (($graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREA ||
-					$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_STACK ||
+					$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREASTACK ||
 					$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE1 ||
 					$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE2 ||
-					$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3) &&
+					$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3 ||
+					$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINESTACK) &&
 					(!empty($graph_items[$t]["data_template_rrd_id"])) &&
 					($graph_item["data_source_name"] == $graph_items[$t]["data_source_name"])) {
 					$local_data_array[$graph_items[$t]["local_data_id"]][] = $graph_items[$t]["data_source_name"];
@@ -330,10 +332,11 @@ function variable_nth_percentile(&$regexp_match_array, &$graph_item, &$graph_ite
 	}elseif ($regexp_match_array[4] == "total") {
 		for ($t=0;($t<count($graph_items));$t++) {
 			if (($graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREA ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_STACK ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREASTACK ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE1 ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE2 ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3) &&
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3 ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINESTACK) &&
 				(!empty($graph_items[$t]["data_template_rrd_id"]))) {
 				if (! empty($nth_cache{$graph_items[$t]["local_data_id"]}{$graph_items[$t]["data_source_name"]})) {
 					$local_nth = $nth_cache{$graph_items[$t]["local_data_id"]}{$graph_items[$t]["data_source_name"]};
@@ -354,10 +357,11 @@ function variable_nth_percentile(&$regexp_match_array, &$graph_item, &$graph_ite
 	}elseif ($regexp_match_array[4] == "total_peak") {
 		for ($t=0;($t<count($graph_items));$t++) {
 			if (($graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREA ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_STACK ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREASTACK ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE1 ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE2 ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3) &&
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3 ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINESTACK) &&
 				(!empty($graph_items[$t]["data_template_rrd_id"]))) {
 				if (! empty($nth_cache{$graph_items[$t]["local_data_id"]}["nth_percentile_maximum"])) {
 					$local_nth = $nth_cache{$graph_items[$t]["local_data_id"]}["nth_percentile_maximum"];
@@ -371,10 +375,11 @@ function variable_nth_percentile(&$regexp_match_array, &$graph_item, &$graph_ite
 	}elseif ($regexp_match_array[4] == "all_max_current") {
 		for ($t=0;($t<count($graph_items));$t++) {
 			if (($graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREA ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_STACK ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREASTACK ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE1 ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE2 ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3) &&
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3 ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINESTACK) &&
 				(!empty($graph_items[$t]["data_template_rrd_id"]))) {
 				if (! empty($ninety_fifth_cache{$graph_items[$t]["local_data_id"]}{$graph_items[$t]["data_source_name"]})) {
 					$local_nth = $ninety_fifth_cache{$graph_items[$t]["local_data_id"]}{$graph_items[$t]["data_source_name"]};
@@ -390,10 +395,11 @@ function variable_nth_percentile(&$regexp_match_array, &$graph_item, &$graph_ite
 	}elseif ($regexp_match_array[4] == "all_max_peak") {
 		for ($t=0;($t<count($graph_items));$t++) {
 			if (($graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREA ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_STACK ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREASTACK ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE1 ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE2 ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3) &&
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3 ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINESTACK) &&
 				(!empty($graph_items[$t]["data_template_rrd_id"]))) {
 				if (! empty($nth_cache{$graph_items[$t]["local_data_id"]}["nth_percentile_maximum"])) {
 					$local_nth = $nth_cache{$graph_items[$t]["local_data_id"]}["nth_percentile_maximum"];
@@ -494,10 +500,11 @@ function variable_bandwidth_summation(&$regexp_match_array, &$graph_item, &$grap
 	}elseif ($regexp_match_array[2] == "total") {
 		for ($t=0;($t<count($graph_items));$t++) {
 			if (($graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREA ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_STACK ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_AREASTACK ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE1 ||
 				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE2 ||
-				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3) &&
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINE3 ||
+				$graph_items[$t]["graph_type_id"] == GRAPH_ITEM_TYPE_LINESTACK) &&
 				(!empty($graph_items[$t]["data_template_rrd_id"]))) {
 				$local_summation = $summation_cache{$graph_items[$t]["local_data_id"]}{$graph_items[$t]["data_source_name"]};
 
