@@ -67,6 +67,7 @@ Cacti CHANGELOG
 -feature#0001332: non SNMP Hosts' Reindex Method should not default to "Uptime goes backwards"
 -feature#0001341: SNMP query: add oid_suffix for weird SNMP queries
 -feature#0001350: Compare Cacti Data Source Info to current RRD File Info
+-feature#0001371: Support for LINE:STACK, was: Stacked LINE
 -feature#0001372: Add Custom SNMP context for datasources 
 -feature#0001401: allow "|query_foo|" substitution for graphing a --vertical-label
 -feature#0001406: Dynamically display field description for templates
